Fixed out-of-place line which is visible when the ClauseCompileDisplay is scrolled.

--- a/SarsaWidgets/ClauseCompileDisplay.razor.css
+++ b/SarsaWidgets/ClauseCompileDisplay.razor.css
@@ -1,5 +1,4 @@
 ﻿.outer {
-    border: solid 1px var(--subtle-border-theme-color, darkgrey);
     width: 100%;
 }
 
